[tool.poetry]
name = "pythonproject14-1"
version = "0.1.0"
description = ""
authors = ["viacheslavzorin <zorin-viacheslav@rambler.ru>"]
readme = "README.md"
packages = [{include = "pythonproject14"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
